tests/date/date.exp
Error: date.js:2
  2: var x:string = d.getTime();
                    ^^^^^^^^^^^ number. This type is incompatible with
  2: var x:string = d.getTime();
           ^^^^^^ string

Error: date.js:18
 18: new Date({});
     ^^^^^^^^^^^^ constructor call. Function cannot be called on any member of intersection type
 18: new Date({});
         ^^^^ intersection
  Member 1:
  380:     constructor(): void;
           ^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:380
  Error:
   18: new Date({});
                ^^ unused function argument
    380:     constructor(): void;
             ^^^^^^^^^^^^^^^^^^^ function type expects no arguments. See lib: <BUILTINS>/core.js:380
  Member 2:
  381:     constructor(timestamp: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:381
  Error:
   18: new Date({});
                ^^ object literal. This type is incompatible with the expected param type of
  381:     constructor(timestamp: number): void;
                                  ^^^^^^ number. See lib: <BUILTINS>/core.js:381
  Member 3:
  382:     constructor(dateString: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:382
  Error:
   18: new Date({});
                ^^ object literal. This type is incompatible with the expected param type of
  382:     constructor(dateString: string): void;
                                   ^^^^^^ string. See lib: <BUILTINS>/core.js:382
  Member 4:
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:383
  Error:
   18: new Date({});
                ^^ object literal. This type is incompatible with the expected param type of
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                             ^^^^^^ number. See lib: <BUILTINS>/core.js:383

Error: date.js:19
 19: new Date(2015, '6');
     ^^^^^^^^^^^^^^^^^^^ constructor call. Function cannot be called on any member of intersection type
 19: new Date(2015, '6');
         ^^^^ intersection
  Member 1:
  380:     constructor(): void;
           ^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:380
  Error:
   19: new Date(2015, '6');
                ^^^^ unused function argument
    380:     constructor(): void;
             ^^^^^^^^^^^^^^^^^^^ function type expects no arguments. See lib: <BUILTINS>/core.js:380
  Member 2:
  381:     constructor(timestamp: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:381
  Error:
   19: new Date(2015, '6');
                      ^^^ unused function argument
    381:     constructor(timestamp: number): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type expects no more than 1 argument. See lib: <BUILTINS>/core.js:381
  Member 3:
  382:     constructor(dateString: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:382
  Error:
   19: new Date(2015, '6');
                ^^^^ number. This type is incompatible with the expected param type of
  382:     constructor(dateString: string): void;
                                   ^^^^^^ string. See lib: <BUILTINS>/core.js:382
  Member 4:
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:383
  Error:
   19: new Date(2015, '6');
                      ^^^ string. This type is incompatible with the expected param type of
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                            ^^^^^^ number. See lib: <BUILTINS>/core.js:383

Error: date.js:20
 20: new Date(2015, 6, '18');
     ^^^^^^^^^^^^^^^^^^^^^^^ constructor call. Function cannot be called on any member of intersection type
 20: new Date(2015, 6, '18');
         ^^^^ intersection
  Member 1:
  380:     constructor(): void;
           ^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:380
  Error:
   20: new Date(2015, 6, '18');
                ^^^^ unused function argument
    380:     constructor(): void;
             ^^^^^^^^^^^^^^^^^^^ function type expects no arguments. See lib: <BUILTINS>/core.js:380
  Member 2:
  381:     constructor(timestamp: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:381
  Error:
   20: new Date(2015, 6, '18');
                      ^ unused function argument
    381:     constructor(timestamp: number): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type expects no more than 1 argument. See lib: <BUILTINS>/core.js:381
  Member 3:
  382:     constructor(dateString: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:382
  Error:
   20: new Date(2015, 6, '18');
                ^^^^ number. This type is incompatible with the expected param type of
  382:     constructor(dateString: string): void;
                                   ^^^^^^ string. See lib: <BUILTINS>/core.js:382
  Member 4:
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:383
  Error:
   20: new Date(2015, 6, '18');
                         ^^^^ string. This type is incompatible with the expected param type of
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                          ^^^^^^ number. See lib: <BUILTINS>/core.js:383

Error: date.js:21
 21: new Date(2015, 6, 18, '11');
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ constructor call. Function cannot be called on any member of intersection type
 21: new Date(2015, 6, 18, '11');
         ^^^^ intersection
  Member 1:
  380:     constructor(): void;
           ^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:380
  Error:
   21: new Date(2015, 6, 18, '11');
                ^^^^ unused function argument
    380:     constructor(): void;
             ^^^^^^^^^^^^^^^^^^^ function type expects no arguments. See lib: <BUILTINS>/core.js:380
  Member 2:
  381:     constructor(timestamp: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:381
  Error:
   21: new Date(2015, 6, 18, '11');
                      ^ unused function argument
    381:     constructor(timestamp: number): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type expects no more than 1 argument. See lib: <BUILTINS>/core.js:381
  Member 3:
  382:     constructor(dateString: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:382
  Error:
   21: new Date(2015, 6, 18, '11');
                ^^^^ number. This type is incompatible with the expected param type of
  382:     constructor(dateString: string): void;
                                   ^^^^^^ string. See lib: <BUILTINS>/core.js:382
  Member 4:
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:383
  Error:
   21: new Date(2015, 6, 18, '11');
                             ^^^^ string. This type is incompatible with the expected param type of
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                         ^^^^^^ number. See lib: <BUILTINS>/core.js:383

Error: date.js:22
 22: new Date(2015, 6, 18, 11, '55');
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ constructor call. Function cannot be called on any member of intersection type
 22: new Date(2015, 6, 18, 11, '55');
         ^^^^ intersection
  Member 1:
  380:     constructor(): void;
           ^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:380
  Error:
   22: new Date(2015, 6, 18, 11, '55');
                ^^^^ unused function argument
    380:     constructor(): void;
             ^^^^^^^^^^^^^^^^^^^ function type expects no arguments. See lib: <BUILTINS>/core.js:380
  Member 2:
  381:     constructor(timestamp: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:381
  Error:
   22: new Date(2015, 6, 18, 11, '55');
                      ^ unused function argument
    381:     constructor(timestamp: number): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type expects no more than 1 argument. See lib: <BUILTINS>/core.js:381
  Member 3:
  382:     constructor(dateString: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:382
  Error:
   22: new Date(2015, 6, 18, 11, '55');
                ^^^^ number. This type is incompatible with the expected param type of
  382:     constructor(dateString: string): void;
                                   ^^^^^^ string. See lib: <BUILTINS>/core.js:382
  Member 4:
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:383
  Error:
   22: new Date(2015, 6, 18, 11, '55');
                                 ^^^^ string. This type is incompatible with the expected param type of
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                                          ^^^^^^ number. See lib: <BUILTINS>/core.js:383

Error: date.js:23
 23: new Date(2015, 6, 18, 11, 55, '42');
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ constructor call. Function cannot be called on any member of intersection type
 23: new Date(2015, 6, 18, 11, 55, '42');
         ^^^^ intersection
  Member 1:
  380:     constructor(): void;
           ^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:380
  Error:
   23: new Date(2015, 6, 18, 11, 55, '42');
                ^^^^ unused function argument
    380:     constructor(): void;
             ^^^^^^^^^^^^^^^^^^^ function type expects no arguments. See lib: <BUILTINS>/core.js:380
  Member 2:
  381:     constructor(timestamp: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:381
  Error:
   23: new Date(2015, 6, 18, 11, 55, '42');
                      ^ unused function argument
    381:     constructor(timestamp: number): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type expects no more than 1 argument. See lib: <BUILTINS>/core.js:381
  Member 3:
  382:     constructor(dateString: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:382
  Error:
   23: new Date(2015, 6, 18, 11, 55, '42');
                ^^^^ number. This type is incompatible with the expected param type of
  382:     constructor(dateString: string): void;
                                   ^^^^^^ string. See lib: <BUILTINS>/core.js:382
  Member 4:
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:383
  Error:
   23: new Date(2015, 6, 18, 11, 55, '42');
                                     ^^^^ string. This type is incompatible with the expected param type of
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                                                           ^^^^^^ number. See lib: <BUILTINS>/core.js:383

Error: date.js:24
 24: new Date(2015, 6, 18, 11, 55, 42, '999');
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ constructor call. Function cannot be called on any member of intersection type
 24: new Date(2015, 6, 18, 11, 55, 42, '999');
         ^^^^ intersection
  Member 1:
  380:     constructor(): void;
           ^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:380
  Error:
   24: new Date(2015, 6, 18, 11, 55, 42, '999');
                ^^^^ unused function argument
    380:     constructor(): void;
             ^^^^^^^^^^^^^^^^^^^ function type expects no arguments. See lib: <BUILTINS>/core.js:380
  Member 2:
  381:     constructor(timestamp: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:381
  Error:
   24: new Date(2015, 6, 18, 11, 55, 42, '999');
                      ^ unused function argument
    381:     constructor(timestamp: number): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type expects no more than 1 argument. See lib: <BUILTINS>/core.js:381
  Member 3:
  382:     constructor(dateString: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:382
  Error:
   24: new Date(2015, 6, 18, 11, 55, 42, '999');
                ^^^^ number. This type is incompatible with the expected param type of
  382:     constructor(dateString: string): void;
                                   ^^^^^^ string. See lib: <BUILTINS>/core.js:382
  Member 4:
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:383
  Error:
   24: new Date(2015, 6, 18, 11, 55, 42, '999');
                                         ^^^^^ string. This type is incompatible with the expected param type of
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                                                                                 ^^^^^^ number. See lib: <BUILTINS>/core.js:383

Error: date.js:25
 25: new Date(2015, 6, 18, 11, 55, 42, 999, 'hahaha');
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ constructor call. Function cannot be called on any member of intersection type
 25: new Date(2015, 6, 18, 11, 55, 42, 999, 'hahaha');
         ^^^^ intersection
  Member 1:
  380:     constructor(): void;
           ^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:380
  Error:
   25: new Date(2015, 6, 18, 11, 55, 42, 999, 'hahaha');
                ^^^^ unused function argument
    380:     constructor(): void;
             ^^^^^^^^^^^^^^^^^^^ function type expects no arguments. See lib: <BUILTINS>/core.js:380
  Member 2:
  381:     constructor(timestamp: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:381
  Error:
   25: new Date(2015, 6, 18, 11, 55, 42, 999, 'hahaha');
                      ^ unused function argument
    381:     constructor(timestamp: number): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type expects no more than 1 argument. See lib: <BUILTINS>/core.js:381
  Member 3:
  382:     constructor(dateString: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:382
  Error:
   25: new Date(2015, 6, 18, 11, 55, 42, 999, 'hahaha');
                ^^^^ number. This type is incompatible with the expected param type of
  382:     constructor(dateString: string): void;
                                   ^^^^^^ string. See lib: <BUILTINS>/core.js:382
  Member 4:
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:383
  Error:
   25: new Date(2015, 6, 18, 11, 55, 42, 999, 'hahaha');
                                              ^^^^^^^^ unused function argument
    383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type expects no more than 7 arguments. See lib: <BUILTINS>/core.js:383

Error: date.js:26
 26: new Date('2015', 6);
     ^^^^^^^^^^^^^^^^^^^ constructor call. Function cannot be called on any member of intersection type
 26: new Date('2015', 6);
         ^^^^ intersection
  Member 1:
  380:     constructor(): void;
           ^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:380
  Error:
   26: new Date('2015', 6);
                ^^^^^^ unused function argument
    380:     constructor(): void;
             ^^^^^^^^^^^^^^^^^^^ function type expects no arguments. See lib: <BUILTINS>/core.js:380
  Member 2:
  381:     constructor(timestamp: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:381
  Error:
   26: new Date('2015', 6);
                ^^^^^^ string. This type is incompatible with the expected param type of
  381:     constructor(timestamp: number): void;
                                  ^^^^^^ number. See lib: <BUILTINS>/core.js:381
  Member 3:
  382:     constructor(dateString: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:382
  Error:
   26: new Date('2015', 6);
                        ^ unused function argument
    382:     constructor(dateString: string): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type expects no more than 1 argument. See lib: <BUILTINS>/core.js:382
  Member 4:
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:383
  Error:
   26: new Date('2015', 6);
                ^^^^^^ string. This type is incompatible with the expected param type of
  383:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                             ^^^^^^ number. See lib: <BUILTINS>/core.js:383


Found 10 errors
